--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
     "@react-leaflet/core": "^2.1.0",
-    "leaflet-draw": "^1.0.4"
+    "leaflet-draw": "^1.0.4",
+    "axios": "^1.6.7",
+    "react-konva": "^18.2.10",
+    "konva": "^9.3.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -37,6 +40,7 @@
     "@types/uuid": "^9.0.8",
     "@types/leaflet": "^1.9.8",
     "@types/leaflet-draw": "^1.0.11",
+    "@types/geojson": "^7946.0.14",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
