--- a/package.json
+++ b/package.json
@@ -10,43 +10,43 @@
     "preview": "vite preview --host 0.0.0.0 --port $PORT"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "lucide-react": "^0.344.0",
-    "vite": "^5.4.2",
+    "@react-leaflet/core": "^2.1.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "tailwindcss": "^3.4.1",
     "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "react-router-dom": "^6.22.3",
     "bcryptjs": "^2.4.3",
-    "uuid": "^9.0.1",
     "dexie": "^3.2.5",
     "dexie-react-hooks": "^1.1.7",
+    "konva": "^9.3.6",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
+    "lucide-react": "^0.344.0",
+    "postcss": "^8.4.35",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-konva": "^18.2.10",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
-    "@react-leaflet/core": "^2.1.0",
-    "leaflet-draw": "^1.0.4",
-    "axios": "^1.6.7",
-    "react-konva": "^18.2.10",
-    "konva": "^9.3.6"
+    "react-router-dom": "^6.22.3",
+    "tailwindcss": "^3.4.1",
+    "uuid": "^9.0.1",
+    "vite": "^5.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/bcryptjs": "2.4.6",
+    "@types/geojson": "7946.0.16",
+    "@types/leaflet": "1.9.19",
+    "@types/leaflet-draw": "1.0.12",
     "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/uuid": "^9.0.8",
-    "@types/leaflet": "^1.9.8",
-    "@types/leaflet-draw": "^1.0.11",
-    "@types/geojson": "^7946.0.14",
+    "@types/react-dom": "18.3.7",
+    "@types/uuid": "9.0.8",
+    "axios": "1.10.0",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "terser": "5.43.1",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "terser": "^5.43.1"
+    "typescript-eslint": "^8.3.0"
   }
 }
