--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-leaflet/core": "^2.1.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "dexie": "^3.2.5",
     "dexie-react-hooks": "^1.1.7",
@@ -33,19 +34,19 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
-    "@types/bcryptjs": "2.4.6",
-    "@types/geojson": "7946.0.16",
-    "@types/leaflet": "1.9.19",
-    "@types/leaflet-draw": "1.0.12",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/geojson": "^7946.0.16",
+    "@types/leaflet": "^1.9.19",
+    "@types/leaflet-draw": "^1.0.12",
+    "@types/node": "^20.14.0",
     "@types/react": "^18.3.5",
-    "@types/react-dom": "18.3.7",
-    "@types/uuid": "9.0.8",
-    "axios": "1.10.0",
+    "@types/react-dom": "^18.3.7",
+    "@types/uuid": "^9.0.8",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
-    "terser": "5.43.1",
+    "terser": "^5.43.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0"
   }
